@@ -561,9 +561,14 @@ public:
                     case T_PP_QHEADER:
                     case T_PP_INCLUDE:
                     // convert to the corresponding ..._next token, if appropriate
-                        if (string_type::npos != value.find("include_"))
-                            id = token_id(id | AltTokenType);
-                        break;
+                        {
+	                      // Skip '#' and whitespace and see whether we find an 
+	                      // 'include_next' here.
+	                          typename string_type::size_type start = value.find("include");
+	                          if (0 == value.compare(start, 12, "include_next", 12))
+	                              id = token_id(id | AltTokenType);
+                            break;
+                        }
 #endif // BOOST_WAVE_SUPPORT_INCLUDE_NEXT != 0
 
                     case T_EOF:
